2003-04-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/slur-beautiful.ly: new file.

	* Documentation/user/refman.itely: updates.

	* input/regression/collisions.ly (threevoice): cleanup.

	* scripts/convert-ly.py:  linewidth = -1  -> raggedright = ##t.

2003-04-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/*.itely: various updates.

	* ly/spanners-init.ly: enddecr/ endcr.

	* Documentation/user/tutorial.itely (Fine tuning a piece): editing
	of tutorial

2003-04-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/ly2dvi.py (extra_init): add compat2 to latex options.

	* lily/new-chord-name-engraver.cc (process_music): use octavation
	(a number) instead of original-pitch to store inversions. This
	fixes a problem with transposed chords with inversions.  

2003-04-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Include compile fix for broken flex, as
	used in includable-lexer.hh.

	* lily/includable-lexer.cc: Bugfix: include config.h.

	* stepmake/aclocal.m4: Check for $GUILE_CONFIG; allows
	circumvention of Debian packaging bug.

2003-04-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flex-2.5.31 hits Debian/unstable.  Fixes below.
	
	* lily/lexer.ll (avoid_silly_flex_induced_gcc_warnings): Disable.

	* lily/includable-lexer.cc [!HAVE_FLEXLEXER_YY_CURRENT_BUFFER]
	(yy_current_buffer): New macro, compile hacks for flex 2.5.29.

	* lily/include/includable-lexer.hh: 
	* lily/lexer.ll: Hack for multiple include of FlexLexer.h.

	* config.hh.in (HAVE_FLEXLEXER_YY_CURRENT_BUFFER): Add.

	* aclocal.m4: Regenerate.

	* stepmake/aclocal.m4 (STEPMAKE_FLEXLEXER): Check for
	yyFlexLexer.yy_current_buffer, which was removed in flex-2.5.29.

	* scm/pdf.scm (use-modules): Include lily.

	* scm/pdftex.scm (start-system): Bugfix: add closing brace (Beernd
	Noordkamp).
	(use-modules): Include lily.
	(lily-def): Bugfix: include tex-val in let.

2003-04-12  Heikki Junes <hjunes@cc.hut.fi>
