@@ -1,0 +1,14 @@
+\version "1.7.16" 
+
+\header {
+
+    texidoc = "The 11 is only added to natural-3 if it
+ is mentioned explicitly."
+
+}
+
+\score {
+      \chords { c:13 c:13.11 c:m13 }
+      \paper { raggedright = ##t } 
+}
+    
